[package]
name = "lib"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
ciborium = "0.2.2"
serde = { version = "1.0.198", features = ["derive"] }
sha256 = "1.5.0"
hex = "0.4.3"
k256 = { version = "0.13.3", features = ["serde", "pem"] }
ecdsa = { version = "0.16.9", features = ["signing", "verifying",
"serde", "pem"] }
uint = "0.9.5"
uuid = { version = "1.18.0", features = ["v4", "serde"] }
rand = "0.8.5"
